--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,8 @@ Version 1.3.13-dev
  + Added Craftbukkit 1.4.6 compatibility
  + Added a configurable durability cap for ArmorImpact to advanced.yml
  + Added the version number to /mcmmo
+ + Added bats, giants, witches, withers, and wither skeletons to the mcMMO combat experience list, and makes their experience drops configurable
+ + Added the ability to track mobs spawned by mob spawners or the Taming ability when the chunks they are in unload and reload
  + Added wooden button to the list of items that shouldn't trigger abilities
  = Fixed issue with missing default cases from several switch/case statements
  = Fixed issue with Mining using actual skill level rather than max skill level
