Fixing a small error pointed out by @sh4z

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -450,7 +450,7 @@ Commands.XPGain.Repair=Opravovani
 Commands.XPGain.Swords=Zabijenim monster.
 Commands.XPGain.Taming=Ochoceni zvirat nebo boj s vlky
 Commands.XPGain.Unarmed=Zabijenim monster.
-Commands.XPGain.WoodCutting=Kaceni stromu
+Commands.XPGain.Woodcutting=Kaceni stromu
 Commands.XPGain=[[DARK_GRAY]]Zisk dovednosti: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Tvuj XP bar byl uzamcen na {0}!
 Commands.xplock.unlocked=[[GOLD]]Tvuj XP bar je nyni [[GREEN]]ODEMCEN[[GOLD]]!
