--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -449,7 +449,7 @@ Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Angenfilod ymosod
 Commands.XPGain.Taming=Anifeiliaid Taming, neu ymladd \u00e2\'ch bleiddiaid
 Commands.XPGain.Unarmed=Attacking Monsters
-Commands.XPGain.WoodCutting=Chopping down trees
+Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]] Cael Profiad: [[GWYN]] {0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
