--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -451,7 +451,7 @@ Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Monster angreifen
 Commands.XPGain.Taming=Tierz\u00e4hmung oder Kampf mit W\u00f6lfen
 Commands.XPGain.Unarmed=Monster angreifen
-Commands.XPGain.WoodCutting=Chopping down trees
+Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]XP Gewinn: [[WHITE]]{0}
 Commands.xplock.locked=[[YELLOW]]Deine XP BAR ist nun auf {0} gesperrt!
 Commands.xplock.unlocked=[[YELLOW]]Deine XP BAR ist nun wieder [[GREEN]]FREIGEGEBEN[[YELLOW]]!
