--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -451,7 +451,7 @@ Commands.XPGain.Repair=Reparando
 Commands.XPGain.Swords=Atacando a Monstruos
 Commands.XPGain.Taming=Domando animales, o combatiendo con tus lobos
 Commands.XPGain.Unarmed=Atacando a Monstruos
-Commands.XPGain.WoodCutting=Talando \u00e1rboles
+Commands.XPGain.Woodcutting=Talando \u00e1rboles
 Commands.XPGain=[[DARK_GRAY]]OBTENCI\u00d3N DE EXPERIENCIA: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Tu BARRA DE EXP esta bloqueada a {0}!
 Commands.xplock.unlocked=[[GOLD]]Tu BARRA DE EXP esta ahora [[GREEN]]DESBLOQUEADA[[GOLD]]!
