--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -451,7 +451,7 @@ Commands.XPGain.Repair=R\u00e9paration
 Commands.XPGain.Swords=Attaquer des monstres
 Commands.XPGain.Taming=Apprivoiser et combattre
 Commands.XPGain.Unarmed=Attaquer des monstres
-Commands.XPGain.WoodCutting=Couper des arbres
+Commands.XPGain.Woodcutting=Couper des arbres
 Commands.XPGain=[[DARK_GRAY]]GAIN D\'XP : [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Votre barre d\'XP est maintenant verrouill\u00e9e sur {0} !
 Commands.xplock.unlocked=[[GOLD]]Votre barre d\'XP est maintenant [[GREEN]]D\u00c9VERROUILL\u00c9E[[GOLD]] !!
