--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -451,7 +451,7 @@ Commands.XPGain.Repair=Riparare
 Commands.XPGain.Swords=Attaccare Mostri
 Commands.XPGain.Taming=Addomesticare Animali, o combattere con i tuoi lupi
 Commands.XPGain.Unarmed=Attaccare Mostri
-Commands.XPGain.WoodCutting=Tagliare alberi
+Commands.XPGain.Woodcutting=Tagliare alberi
 Commands.XPGain=[[DARK_GRAY]]GUADAGNARE XP: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]La tua BARRA XP \u00e8 ora bloccata a {0}!
 Commands.xplock.unlocked=[[GOLD]]La tua BARRA XP \u00e8 ora [[GREEN]]SBLOCCATA[[GOLD]]!
