--- a/src/main/resources/locale/locale_lv.properties
+++ b/src/main/resources/locale/locale_lv.properties
@@ -451,7 +451,7 @@ Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Attacking Monsters
 Commands.XPGain.Taming=Animal Taming, or combat w/ your wolves
 Commands.XPGain.Unarmed=Attacking Monsters
-Commands.XPGain.WoodCutting=Koku cir\u0161ana
+Commands.XPGain.Woodcutting=Koku cir\u0161ana
 Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
