--- a/src/main/resources/locale/locale_no.properties
+++ b/src/main/resources/locale/locale_no.properties
@@ -451,7 +451,7 @@ Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Angriper Monstre
 Commands.XPGain.Taming=Dyr temming, eller sl\u00e5ssing hvisk dine ulver.
 Commands.XPGain.Unarmed=Angriper Monstre
-Commands.XPGain.WoodCutting=Chopping down trees
+Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]XP GEVINST: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
