--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -451,7 +451,7 @@ Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Attacking Monsters
 Commands.XPGain.Taming=Animal Taming, or combat w/ your wolves
 Commands.XPGain.Unarmed=Attacking Monsters
-Commands.XPGain.WoodCutting=Chopping down trees
+Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Sua barra de XP BAR est\u00e1 travada em {0}!
 Commands.xplock.unlocked=[[GOLD]]Sua barra de XP foi [[GREEN]]DESTRAVADA[[GOLD]]!
