--- a/src/main/resources/locale/locale_sv.properties
+++ b/src/main/resources/locale/locale_sv.properties
@@ -451,7 +451,7 @@ Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Attacking Monsters
 Commands.XPGain.Taming=Djurt\u00e4mjning, eller sl\u00e5ss m/ dina vargar
 Commands.XPGain.Unarmed=Attacking Monsters
-Commands.XPGain.WoodCutting=Chopping down trees
+Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
