--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -399,6 +399,7 @@ Commands.Party.Teleport=<nom> [[RED]]- T\u00e9l\u00e9porte sur un membre du grou
 Commands.Party.Toggle=[[RED]]- Active / d\u00e9sactive le canal groupe
 Commands.Party=<nom> [[RED]]- Cr\u00e9e ou rejoint ce groupe
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--Classement mcMMO ([[BLUE]]Niveau Global[[YELLOW]])--
+Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX LEVEL: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]NIVEAU GLOBAL : [[GREEN]]{0}
 Commands.Skill.Invalid=[[RED]]Ce talent n\'existe pas !
 Commands.Skill.Leaderboard=[[YELLOW]]--Classement mcMMO ([[BLUE]]{0}[[YELLOW]])--
