--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -399,6 +399,7 @@ Commands.Party.Teleport=<giocatore> [[RED]]- Teletrasportati verso un membro del
 Commands.Party.Toggle=[[RED]]- Attiva o Disattiva la Chat di Compagnia
 Commands.Party=<nome-compagnia> [[RED]]- Crea/Unisciti alla compagnia scelta
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--Classifica mcMMO dei [[BLUE]]Livelli di Potere[[YELLOW]]--
+Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX LEVEL: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]LIVELLO DI POTERE: [[GREEN]]{0}
 Commands.Skill.Invalid=[[RED]]Questo non \u00e8 un nome di abilit\u00e0 valido!
 Commands.Skill.Leaderboard=[[YELLOW]]--Classifica mcMMO di [[BLUE]]{0}[[YELLOW]]--
