--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -399,6 +399,7 @@ Commands.Party.Teleport=<player> [[RED]]- \u4f20\u9001\u5230\u961f\u4f0d\u6210\u
 Commands.Party.Toggle=[[RED]]- \u5207\u6362\u961f\u4f0d\u804a\u5929
 Commands.Party=[\u961f\u4f0d\u540d] [[RED]]- \u521b\u5efa/\u52a0\u5165\u5df2\u5b58\u5728\u7684\u961f\u4f0d
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] \u80fd\u529b\u7b49\u7ea7 [[YELLOW]]\u6392\u884c\u699c--
+Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX LEVEL: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]\u80fd\u529b\u7b49\u7ea7: [[GREEN]]{0}
 Commands.Skill.Invalid=[[RED]]\u8fd9\u4e0d\u662f\u4e00\u4e2a\u6709\u6548\u7684\u6280\u80fd\u540d\u5b57!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] \u6392\u884c\u699c--
