--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -399,6 +399,7 @@ Commands.Party.Teleport=<jugador> [[RED]]- Teletransportarse al miembro del grup
 Commands.Party.Toggle=[[RED]]- Alternar chat de grupo
 Commands.Party=<nombre del grupo> [[RED]]- Crear/Unirse al grupo elegido
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO-- Tabla de L\u00edderes: [[BLUE]]Nivel de Poder
+Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX LEVEL: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]NIVEL DE PODER: [[GREEN]]{0}
 Commands.Skill.Invalid=[[RED]]\u00a1Esa no es una habilidad v\u00e1lida!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO-- Tabla de L\u00edderes: [[BLUE]]{0}
