Adding another missing line to all locale files

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -248,6 +248,7 @@ Swords.Skills.SS.On=[[GREEN]]**HROZIVY UTOK BYL AKTIVOVAN**
 Swords.Skills.SS.Refresh=[[GREEN]]Tvoje schopnost [[YELLOW]]Serrated Strikes [[GREEN]]je obnovena!
 Swords.Skills.SS.Other.Off=[[RED]]Hrozivy utok[[GREEN]] byl deaktivovan [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] pouzil [[RED]]Hrozivy utok!
+Swords.Skillup=[[YELLOW]]Swords skill increased by {0}. Total ({1})
 Swords.SS.Length=[[RED]]Serrated Strikes Length: [[YELLOW]]{0}s
 
 #TAMING
