--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -248,6 +248,7 @@ Swords.Skills.SS.On=[[GREEN]]**SERRATED STRIKES ACTIVATED**
 Swords.Skills.SS.Refresh=[[GREEN]]Your [[YELLOW]]Serrated Strikes [[GREEN]]ability is refreshed!
 Swords.Skills.SS.Other.Off=[[RED]]Serrated Strikes[[GREEN]] has worn off for [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Serrated Strikes!
+Swords.Skillup=[[YELLOW]]Swords skill increased by {0}. Total ({1})
 Swords.SS.Length=[[RED]]Serrated Strikes Length: [[YELLOW]]{0}s
 
 #TAMING
