--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -249,6 +249,7 @@ Swords.Skills.SS.On=[[GREEN]]**ATAQUE DENTADO ACTIVADO**
 Swords.Skills.SS.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]Golpe Dentado [[GREEN]]fue refrescada!
 Swords.Skills.SS.Other.Off=[[RED]]Ataque Dentado[[GREEN]] le ha expirado a [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Ataque Dentado!
+Swords.Skillup=[[YELLOW]]Swords skill increased by {0}. Total ({1})
 Swords.SS.Length=[[RED]]Duraci\u00f3n del Ataque Dentado: [[YELLOW]]{0}s
 
 #TAMING
