--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -249,6 +249,7 @@ Swords.Skills.SS.On=[[GREEN]]**COLPI SEGHETTATI ATTIVATI**
 Swords.Skills.SS.Refresh=[[GREEN]]La tua capacit\u00e0 [[YELLOW]]Colpi Seghettati [[GREEN]]si \u00e8 rigenerata!
 Swords.Skills.SS.Other.Off=[[RED]]Colpi Seghettati[[GREEN]] si \u00e8 esaurito per [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED]]Colpi Seghettati!
+Swords.Skillup=[[YELLOW]]Swords skill increased by {0}. Total ({1})
 Swords.SS.Length=[[RED]]Durata di Colpi Seghettati: [[YELLOW]]{0}s
 
 #TAMING
