Locale file update!

--- a/src/main/resources/locale/locale_pl_PL.properties
+++ b/src/main/resources/locale/locale_pl_PL.properties
@@ -90,7 +90,7 @@ Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}%
 Fishing.ItemFound=[[GRAY]]Treasure found!
 Fishing.Listener=Fishing:
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
-Fishing.SkillName=BALIK TUTMA
+Fishing.SkillName=FISHING
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
