Fix locale stuff again.

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -86,7 +86,7 @@ Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Vyklepni p\u0159edm\u011bty z p\u0159\u00ed\u0161er s prutem
 Fishing.Effect.6=Fisherman\'s Diet
 Fishing.Effect.7=Improves hunger restored from fished foods
-Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}%
+Fishing.Enchant.Chance=[[RED]]\u0160ance na magick\u00e9ho lovce: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Nasel si poklad!
 Fishing.Listener=Rybareni:
 Fishing.MagicFound=[[GRAY]]C\u00edt\u00edte dotek magie s t\u00edmto \u00falovkem...
@@ -417,7 +417,7 @@ Commands.XPGain.Repair=Opravovani
 Commands.XPGain.Swords=Zabijenim monster.
 Commands.XPGain.Taming=Ochoceni zvirat nebo boj s vlky
 Commands.XPGain.Unarmed=Zabijenim monster.
-Commands.XPGain.WoodCutting=Kaceni stromu
+Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]Zisk dovednosti: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Tvuj XP bar byl uzamcen na {0}!
 Commands.xplock.unlocked=[[GOLD]]Tvuj XP bar je nyni [[GREEN]]ODEMCEN[[GOLD]]!
@@ -464,6 +464,7 @@ Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
 Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
 Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
+Perks.lucky.bonus=[[GOLD]] ({0}% with Lucky Perk)
 Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
 Perks.activationtime.name=Endurance
