--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -86,7 +86,7 @@ Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Shake items off of mobs w/ fishing pole
 Fishing.Effect.6=Fisherman\'s Diet
 Fishing.Effect.7=Improves hunger restored from fished foods
-Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}%
+Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[AQUA]]Du hast einen Schatz gefunden!
 Fishing.Listener=Angeln:
 Fishing.MagicFound=[[AQUA]]Du hast etwas magisches gefunden...
