--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -86,7 +86,7 @@ Fishing.Effect.4=Sacudir (contra Entidades)
 Fishing.Effect.5=Sacudir los items fuera de los monstruos con la ca\u00f1a de pescar
 Fishing.Effect.6=Fisherman\'s Diet
 Fishing.Effect.7=Improves hunger restored from fished foods
-Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}%
+Fishing.Enchant.Chance=[[RED]]Probabilidad de Cazador M\u00e1gico: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]\u00a1Tesoro encontrado!
 Fishing.Listener=Pescador: 
 Fishing.MagicFound=[[GRAY]]Sientes un toque de magia con esta pesca...
@@ -417,7 +417,7 @@ Commands.XPGain.Repair=Reparando
 Commands.XPGain.Swords=Atacando a Monstruos
 Commands.XPGain.Taming=Domando animales, o combatiendo con tus lobos
 Commands.XPGain.Unarmed=Atacando a Monstruos
-Commands.XPGain.Woodcutting=Talando \u00e1rboles
+Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]OBTENCI\u00d3N DE EXPERIENCIA: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Tu BARRA DE EXP esta bloqueada a {0}!
 Commands.xplock.unlocked=[[GOLD]]Tu BARRA DE EXP esta ahora [[GREEN]]DESBLOQUEADA[[GOLD]]!
