--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -86,7 +86,7 @@ Fishing.Effect.4=Scuotere (contro Entit\u00e0)
 Fishing.Effect.5=Scrolla oggetti di dosso ai mob con una canna da pesca
 Fishing.Effect.6=Dieta del Pescatore
 Fishing.Effect.7=Aumenta la fame recuperata tramite cibi pescati
-Fishing.Enchant.Chance=[[RED]]Probabilit\u00e0 di Cacciatore di Magia: [[YELLOW]]{0}%
+Fishing.Enchant.Chance=[[RED]]Possibilit\u00e0 di Cacciatore di Magia: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Hai trovato un tesoro!
 Fishing.Listener=Pesca:
 Fishing.MagicFound=[[GRAY]]Senti un tocco di magia in questa cattura...
@@ -417,7 +417,7 @@ Commands.XPGain.Repair=Riparare
 Commands.XPGain.Swords=Attaccare Mostri
 Commands.XPGain.Taming=Addomesticare Animali, o combattere con i tuoi lupi
 Commands.XPGain.Unarmed=Attaccare Mostri
-Commands.XPGain.Woodcutting=Tagliare alberi
+Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]GUADAGNARE XP: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]La tua BARRA XP \u00e8 ora bloccata a {0}!
 Commands.xplock.unlocked=[[GOLD]]La tua BARRA XP \u00e8 ora [[GREEN]]SBLOCCATA[[GOLD]]!
@@ -464,6 +464,7 @@ Perks.xp.desc=Ricevi {0}x XP.
 Perks.lucky.name=Fortuna
 Perks.lucky.desc=Aumenta del 33% le probabilit\u00e0 di attivarsi delle abilit\u00e0 e capacit\u00e0 di {0}.
 Perks.lucky.desc.login=Aumenta del 33% le probabilit\u00e0 di attivarsi di certe abilit\u00e0 e capacit\u00e0.
+Perks.lucky.bonus=[[GOLD]] ({0}% with Lucky Perk)
 Perks.cooldowns.name=Recupero Rapido
 Perks.cooldowns.desc=Riduce la durata del raffreddamento di {0}.
 Perks.activationtime.name=Resistenza
