--- a/src/main/resources/locale/locale_tr_TR.properties
+++ b/src/main/resources/locale/locale_tr_TR.properties
@@ -86,7 +86,7 @@ Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Shake items off of mobs w/ fishing pole
 Fishing.Effect.6=Fisherman\'s Diet
 Fishing.Effect.7=Improves hunger restored from fished foods
-Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}%
+Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Treasure found!
 Fishing.Listener=Fishing:
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
