--- a/Changelog.txt
+++ b/Changelog.txt
@@ -33,6 +33,7 @@ Version 1.3.13-dev
  = Fixed a bug where dropped items did not retain custom NBT data
  = Fixed a bug which caused a potentially infinite recursion in a btree structure
  = Fixed a NPE with custom blocks
+ = Fixed a bug with Blast Mining never dropping debris blocks
  ! GJ stopped being a lazy slacker and got stuff done
  ! Changed code that uses SpoutPlugin to make it compatible with the latest version
  ! Changed Reimplemented skill level and power level caps.
