Fixing two typos @Jobsti

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -127,7 +127,7 @@ Herbalism.Effect.3=Auto-Saht, s\u00E4ht Weizen wenn abgeerntet
 Herbalism.Effect.4=Gr\u00FCner Daumen (Cobble/Stone Brick/Dirt)
 Herbalism.Effect.5=Macht Bricks zu Mossy-Bricks, l\u00E4sst Gras wachsen
 Herbalism.Effect.6=Bauernfr\u00FChst\u00FCck
-Herbalism.Effect.7=Erh\u00F6ht Effektivit\u00E4t von geframter Nahrung
+Herbalism.Effect.7=Erh\u00F6ht Effektivit\u00E4t von gefarmter Nahrung
 Herbalism.Effect.8=Doppel Drops (Alle Pflanzen)
 Herbalism.Effect.9=Verdoppelt die normale Ausbeute (Loot)
 Herbalism.Listener=Pflanzenkunde: 
@@ -205,7 +205,7 @@ Repair.Listener.Anvil=[[DARK_RED]]Du hast einen Amboss gebaut, hiermit kannst du
 Repair.Listener.Anvil2=[[DARK_RED]]Du hast einen Verwertungs-Amboss gebaut,  hiermit kannst du R\u00FCstung und Werkzeug verwerten.
 Repair.Listener=Reparatur: 
 Repair.SkillName=REPARATUR
-RepairRepair.Skills.AdeptSalvage=[[DARK_RED]]Du hast nicht gen\u00FCgend Skill zum Verwerten.
+Repair.Skills.AdeptSalvage=[[DARK_RED]]Du hast nicht gen\u00FCgend Skill zum Verwerten.
 Repair.Skills.AdeptDiamond=[[DARK_RED]]Du hast nicht gen\u00FCgend Skill um Diamant zu reparieren.
 Repair.Skills.AdeptGold=[[DARK_RED]]Du hast nicht gen\u00FCgend Skill um Gold zu reparieren.
 Repair.Skills.AdeptIron=[[DARK_RED]]Du hast nicht gen\u00FCgend Skill um Eisen zu reparieren
