Display Endurance Perk stats in skill commands

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -531,3 +531,4 @@ Perks.cooldowns.name=Schnelle Wiederherstellung
 Perks.cooldowns.desc=Verk\u00FCrzt die Cooldownzeit um {0}.
 Perks.activationtime.name=Ausdauer
 Perks.activationtime.desc=Erh\u00F6ht die Aktivierungszeit von F\u00E4higkeiten um {0} Sekunden.
+Perks.activationtime.bonus=[[GOLD]] ({0}s with Endurance Perk)
