--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -540,3 +540,4 @@ Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
 Perks.activationtime.name=Endurance
 Perks.activationtime.desc=Increases ability activation time by {0} seconds.
+Perks.activationtime.bonus=[[GOLD]] ({0}s with Endurance Perk)
