--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -469,3 +469,4 @@ Perks.cooldowns.name=Recupero Rapido
 Perks.cooldowns.desc=Riduce la durata del raffreddamento di {0}.
 Perks.activationtime.name=Resistenza
 Perks.activationtime.desc=Incrementa il tempo di attivazione dell\'abilit\u00e0 di {0} secondi.
+Perks.activationtime.bonus=[[GOLD]] ({0}s with Endurance Perk)
