--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,9 @@ Key:
   - Removal
 
 Version 1.3.13-dev
+ + Added task to prune old and powerless users from the SQL database.
+    *** WARNING: THIS WILL RUN AUTOMATICALLY ON YOUR DB. IF YOU ARE WORRIED ***
+    *** ABOUT DATA LOSS, BACK UP YOUR SQL DATA BEFORE INSTALLING THIS BUILD ***
  + Added Craftbukkit 1.4.6 compatibility
  + Added a configurable durability cap for ArmorImpact to advanced.yml
  + Added the version number to /mcmmo
